--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div id="answers"></div>
       <div id="time"></div>
       <button class="btn btn-success" id="start">Start</button>
-      <button class="btn btn-success" id="reset">Play Again?</button>
+      <!-- <button class="btn btn-success" id="reset">Play Again?</button> -->
     </div>
     <!-- corny gameshow music plays when you click start -->
     <audio id="myAudio">
