--- a/index.html
+++ b/index.html
@@ -12,6 +12,29 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
+
+    <!-- Our custom css and javascript -->
+    <link rel="stylesheet" href="assets/css/reset.css" />
+    <link rel="stylesheet" href="assets/css/css.css" />
+  </head>
+  <body>
+    <header>
+      <h1>Time for Trivia</h1>
+    </header>
+
+    <div class="wrapper">
+      <div id="questions"></div>
+      <div  id="answers"></div>
+      <!-- <div id="choices"></div> -->
+
+      <div id="time"></div>
+      <button class="btn btn-success" id="start">Start</button>
+      <!-- <button class="btn btn-success" id="reset">Play Again?</button> -->
+    </div>
+    <!-- corny gameshow music plays when you click start -->
+    <audio id="myAudio">
+      <source src="gameshow.MP3" type="audio/mpeg" />
+    </audio>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -27,29 +50,9 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
-    <!-- Our custom css and javascript -->
-    <link rel="stylesheet" href="assets/css/reset.css" />
-    <link rel="stylesheet" href="assets/css/css.css" />
     <script
       type="text/javascript"
       src="../Trivia-Game/assets/javascript/newtry.js"
     ></script>
-  </head>
-  <body>
-    <header>
-      <h1>Time for Trivia</h1>
-    </header>
-
-    <div class="wrapper">
-      <div id="questions"></div>
-      <div id="answers"></div>
-      <div id="time"></div>
-      <button class="btn btn-success" id="start">Start</button>
-      <!-- <button class="btn btn-success" id="reset">Play Again?</button> -->
-    </div>
-    <!-- corny gameshow music plays when you click start -->
-    <audio id="myAudio">
-      <source src="gameshow.MP3" type="audio/mpeg" />
-    </audio>
   </body>
 </html>
