set choices for each question to append to answer spot. Finally!

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="wrapper">
       <div id="questions"></div>
       <div  id="answers"></div>
-      <!-- <div id="choices"></div> -->
+      <div id="choices"></div>
 
       <div id="time"></div>
       <button class="btn btn-success" id="start">Start</button>
