--- a/index.html
+++ b/index.html
@@ -1,58 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Trivia Game</title>
-    <!-- Bootstrap javascript, jQuery, css -->
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
-    />
 
-    <!-- Our custom css and javascript -->
-    <link rel="stylesheet" href="assets/css/reset.css" />
-    <link rel="stylesheet" href="assets/css/css.css" />
-  </head>
-  <body>
-    <header>
-      <h1>Time for Trivia</h1>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Trivia Game</title>
+  <!-- Bootstrap javascript, jQuery, css -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
 
-    <div class="wrapper">
-      <div id="questions"></div>
-      <div  id="answers"></div>
-      <div id="choices"></div>
+  <!-- Our custom css and javascript -->
+  <link rel="stylesheet" href="assets/css/reset.css" />
+  <link rel="stylesheet" href="assets/css/css.css" />
+</head>
 
-      <div id="time"></div>
-      <button class="btn btn-success" id="start">Start</button>
-      <!-- <button class="btn btn-success" id="reset">Play Again?</button> -->
+<body>
+  <header>
+    <h1>Time for Trivia</h1>
+  </header>
+
+  <div class="wrapper">
+    <div>
+      <h2 id="questions"></h2>
     </div>
-    <!-- corny gameshow music plays when you click start -->
-    <audio id="myAudio">
-      <source src="gameshow.MP3" type="audio/mpeg" />
-    </audio>
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      type="text/javascript"
-      src="../Trivia-Game/assets/javascript/newtry.js"
-    ></script>
-  </body>
+    <div id="imgword"></div>
+    <div id="img"></div>
+    <div id="answers"></div>
+    <div id="choices"></div>
+
+    <div id="time"></div>
+    <button class="btn btn-success" id="start">Start</button>
+    <!-- <button class="btn btn-success" id="reset">Play Again?</button> -->
+  </div>
+  <!-- corny gameshow music plays when you click start -->
+  <audio id="myAudio">
+    <source src="gameshow.MP3" type="audio/mpeg" />
+  </audio>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+  <script type="text/javascript" src="../Trivia-Game/assets/javascript/newtry.js"></script>
+</body>
+
 </html>
