win img function created

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
     </div>
     <div id="imgword"></div>
     <div id="img"></div>
-    <div id="answers"></div>
+    <div id="answers">
+
+
+    </div>
     <div id="choices"></div>
 
     <div id="time"></div>
