--- a/index.html
+++ b/index.html
@@ -21,16 +21,9 @@
   </header>
 
   <div class="wrapper">
-    <div>
-      <h2 id="questions"></h2>
-    </div>
-    <div id="imgword"></div>
-    <div id="img"></div>
-    <div id="answers">
-
-
-    </div>
+    <div id="questions"></div>
     <div id="choices"></div>
+    <div id="img"> </div>
 
     <div id="time"></div>
     <button class="btn btn-success" id="start">Start</button>
