what happened to the working function charles. who is charles?

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <div id="time"></div>
     <button class="btn btn-success" id="start">Start</button>
     <!-- <button class="btn btn-success" id="reset">Play Again?</button> -->
+    <p id="demo"></p>
   </div>
   <!-- corny gameshow music plays when you click start -->
   <audio id="myAudio">
